# ChangeLog for dev-util/a8
# Copyright 1999-2014 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/dev-util/a8/ChangeLog,v 1.18 2014/11/25 22:43:48 hasufell Exp $

  25 Nov 2014; Julian Ospald <hasufell@gentoo.org> metadata.xml:
  drop maintainership

  15 Aug 2014; Samuli Suominen <ssuominen@gentoo.org> a8-0.11-r2.ebuild:
  Fix HOMEPAGE wrt #519970. Punt obsolete Python 2.6.x support.

  06 Jul 2014; Michał Górny <mgorny@gentoo.org> a8-0.11-r2.ebuild:
  Clean up obsolete dependencies on virtual/python-argparse and virtual/python-
  unittest2 (those packages were only required for <=python-2.6).

  07 Apr 2013; Julian Ospald <hasufell@gentoo.org> -a8-0.10.ebuild,
  -a8-0.11.ebuild:
  remove old

  07 Apr 2013; Julian Ospald <hasufell@gentoo.org> a8-0.11-r2.ebuild:
  depend on multiple python abi compatible vte ebuild

  07 Apr 2013; Julian Ospald <hasufell@gentoo.org>
  files/a8-0.11-argparse.patch:
  add link to patch header

*a8-0.11-r2 (07 Apr 2013)

  07 Apr 2013; Julian Ospald <hasufell@gentoo.org> -a8-0.11-r1.ebuild,
  +a8-0.11-r2.ebuild, +files/a8-0.11-argparse.patch:
  fix startup problems due to changed argparse ebuild

  07 Apr 2013; Julian Ospald <hasufell@gentoo.org> a8-0.11-r1.ebuild:
  fix deps

  06 Jan 2013; Julian Ospald <hasufell@gentoo.org> a8-0.11-r1.ebuild:
  fix argparse dep

*a8-0.11-r1 (06 Jan 2013)

  06 Jan 2013; Julian Ospald <hasufell@gentoo.org> +a8-0.11-r1.ebuild:
  revbump: migrate to distutils-r1

  17 Dec 2012; Julian Ospald <hasufell@gentoo.org> metadata.xml:
  grab it

  29 Oct 2012; Michał Górny <mgorny@gentoo.org> a8-0.10.ebuild, a8-0.11.ebuild:
  Use virtual for argparse.

  14 Sep 2012; Samuli Suominen <ssuominen@gentoo.org> metadata.xml:
  Push to maintainer-needed@

*a8-0.11 (14 Sep 2012)

  14 Sep 2012; Samuli Suominen <ssuominen@gentoo.org> +a8-0.11.ebuild:
  Version bump.

  02 Sep 2012; Samuli Suominen <ssuominen@gentoo.org> -a8-0.8.ebuild,
  -a8-0.9.ebuild:
  old

*a8-0.10 (02 Sep 2012)