@@ -3,25 +3,25 @@ Hash: SHA256
 
 AUX a8-0.11-argparse.patch 281 SHA256 06ecbe9d724b5dc4ac9e0ef008bd3b9d10ed666d91a80edf20eca40642ba58e8 SHA512 a6456574f18b93555a0afe9a7ddcef561ddc1f5c2c93b4db0b6026f052f49957a4d5e9178aad92e828cf3d207a1c7a2bd9ff7570643fcadc98b40e980a46df22 WHIRLPOOL b01080dcfe58a60f012a96900aa01c73ddc822378d3caf7a396ba726dfb04488aa7828bf998cf66a20e4d5eff47825dbe6443ca43af77d0354d8a391a0441666
 DIST a8-0.11.tar.gz 39435 SHA256 0ef94e70f0b97de0ecfdd7297f70435b52efbdf3a04e0b8ba1927d3535cca7f2 SHA512 253aa8161a195d4dd1d1fb392338478c179b5878e672d94baffa99a5e7e42f1deeb6d1dc8bbc9f3991411ca231d054a71ab96be1aae7925a22347d478832e0a2 WHIRLPOOL f64d61b6a59d03c2cd9e78f57c01842ea0b7e2c3542aa533cdf7c15d6c9e41750d4581ca5d7348beb311754e273e168275e36d80daca00ca58e999559f3ef348
-EBUILD a8-0.11-r2.ebuild 1245 SHA256 c4d3f53b87a7ed9f93ee286ba8bae4c5a5d31a7f212dfa6d7aceb8cddafa879c SHA512 1f71e5ab97944dada44bc02a9d25dbd2c14e4d677fda2a4df3842c39e16151492acb762805a492c32c35b304b7eefcf1262c4b4c292d5e590fe1a79146af4f0b WHIRLPOOL b41cb0dc439cab421d7ac0d4b68ca2087a3fff79cd68a82fcf3287c69d2a73f3a98f1e904b01ecf99eae259340c68612cd4a09b0b4909f9968d554b0d2a625a4
-MISC ChangeLog 2314 SHA256 82d53614770353213f6e7084a72b0741d52bb97e8ec55b18deaeceb4be2756d6 SHA512 005f95e628878278aba4a1c11db728f497d926c96d584c21f80f5462b85bbee87d9ef9d5ea170cf0790b6896e426abc5a11b1738ef01f3e752ee26a8f007de1b WHIRLPOOL d944c8b705242de8aee40dfe806320b264e1a73dea3e488f49b4ac1a5061d7a565d55e87307ec22b9c0be6774e22a8dd94b148340939fed9d77a707af619b17c
+EBUILD a8-0.11-r2.ebuild 1278 SHA256 1c3cf3c5f7dea7f987eba2f6f9dddcf6f3a1d23e1ca7012a987f4e77ed9194b1 SHA512 9a3135399c7a4072e3c66b2f7aa2af74f44667894f208fb2b8ceda2b7e8b5eb4ab2bd1d0a08a971eff2ae4316f94ef46a387483f271bd07823e51299733f2834 WHIRLPOOL 76bbf9a624eccf2d09071bd8fe3733d8e47eb8bafe9cd13c1a5cd572ce31debac469b5ba35fcff4e13683139467b7f6238dee4e4630d3ed236b097d916f264e5
+MISC ChangeLog 2411 SHA256 c29412300749f518a29a9ccfac1dd8c86628c01204412d208fa851657ac48db4 SHA512 74e5a93e56609d196423c452c70cd498a3665c4629889f46dc55fe65ff144ed79f58b428eb4795e29d83ba5867117831795ac11530951020184a4dcaab40f76c WHIRLPOOL 4d155ece8a3b9c1f94a9fbeb06821736f8740335b2f3049b1da30c9b4d1048fd9ce4db2e6711591522b586ead86979c8414e4747a762055255e113bbc14d5fad
 MISC metadata.xml 279 SHA256 27ff557194d25fbd8899aa42f10eb4419f90e8e77a910d032c1af83f4e4a9608 SHA512 8a1b709577efd03c57e5fa38fcd8f6f781d6ba1f9281ead1ef06bc156f7a9f53f910d19a261af6cd6bf0edc257d001161ca76f8b5f6d2f95a6adc91f96c2c554 WHIRLPOOL 823a3ced0a73dabfc5de2341860f4de029d6bca80af2eb8b6003d4a1d4d835edd30a6b22fb406f5ccc247310a843339daaee9913dfe9e8a26fd5247c28836077
 -----BEGIN PGP SIGNATURE-----
-Version: GnuPG v2.0
+Version: GnuPG v2
 
-iQJ8BAEBCABmBQJUdQYkXxSAAAAAAC4AKGlzc3Vlci1mcHJAbm90YXRpb25zLm9w
-ZW5wZ3AuZmlmdGhob3JzZW1hbi5uZXQzMDlCNDQ4NjEyNDI4NjA5REVEMDI3MzIy
-MjBDRDFDNUJERUVEMDIwAAoJECIM0cW97tAg0RwQAL38d1FkMNUdRKRHIVqPYY+w
-7+EL/o7Tfgckjn+1Ua80eI3LUFyi0DiYZKUDYM/m11bN3icZoxgDTSBpI5j3k6On
-CDDdSIfU7kBJI9F9SPG/PDKXf0svLnTLkBBUtItvrZcIovTTSADY4Cj0HBBquet9
-fLXTRqz4ORGDV5mz59pEKj6W2OLs+CFCZJTIAq6PQ/AN8mLu5QQfiAHCFh6HlQ14
-80obGtT/qB/Xm/WUY94H45Mw7ovPoIvhzhHF12fPXH6jzcXSa3XpaGDpOhTgB7JP
-8rECuuwSD2zfEiBZFwJq9b9sWaQvgRZ4qA9F3yuEGZ7Tg9XcuwfwXxu1IfX7CxW3
-i/+QRHyfXCGgHQ8jKWAukmroEhR050zKRaK+DG5cCVXyn/9CTtZQcUOHzmpKFOMc
-IRuExpJs6PQFDygiiFD8MS1FwNrIPIglWySwK6R+iHHPeX/9IhgDS10n3WxepSta
-m55gtkrXR/WD+S8bnXAdvZTh63t2BCNDl57oULpdpMm7BaYXtEib5M83n9E0CKoe
-ujYbaQlv1t7uhEmovKpHuO9hDgd89hD3V8T/mJZinUoIvHmMUavsSdz1SijpDIen
-MULd/1qPzzxIdq61lHql8kWiJHG7+hJPnWsdPOwXO8u88LeO+98Atzd0ILbmwDhT
-H2nPptSxhDOyGV+z6BsZ
-=z/bM
+iQJ8BAEBCABmBQJUnAbHXxSAAAAAAC4AKGlzc3Vlci1mcHJAbm90YXRpb25zLm9w
+ZW5wZ3AuZmlmdGhob3JzZW1hbi5uZXQ2REJCMDdDQzRGMERBRDA2RUEwQUZFNDFC
+MDdBMUFFQUVGQjQ0NjRFAAoJELB6GurvtEZOAygQALBBmqUvwIfDob/w/Nc8KuMv
+YlmJ/sp/Hxt5lNWv5J5+SLKbZSzMJ5BCBEgVCVYQYth32V2zutISsbVdGAlag3EL
+/zNDq9vlQJ/5zjl9TgU9DaMpbL6Wod8osulu4mLE554V3owivf+xgHA/Xj80Fvty
+yv35MzXpAZsasxZ+uIwOvo4nrsn+H32JL4HTyEYW0Y78BRhL5MXvuOG9rkOYrZha
+Fbqlaxbq7FnzTsR0sV/AULmlmSIAh1m/WbyV43PqQMQowwqm6KJeRZOB7riVWT9D
+9lyPoJlEoq/WOb8sEyebUXIMxQ1MCT92HL6DKsSoBYCCopU39qAqOAF+S0U4Bqqs
+cPglfGyQlUl9fsAak1lRktoDcbuGf59E56RqVICHswQIdrG4RYJPWtzj2Gnaekqx
+4GVW/QSE1rGLX3faYLyRH5DU4Ki0Rwb0j4WM0Js3SjyTjnrci739fksXnDXb3l2l
+WHMl2iNACJK10+w2vnmYEjnYdtwk9obfciPpkqb7rdEuBeQLkcIA3/AyWWabfu+t
+i5kl2Mg700XZv+a5DkgoeVeHjKGpG2iDBCJxeWtC7AunPpLGmGQ8GeXk3lMU8yQ9
+hRchOWBmYYlxOzpYFdDOAKpamfJ8GVIsOetMPkw3sUwKTY1MGRohsY65HmlR/XO9
+F4YhNYHcJB+mnIDIabJQ
+=EXzX
 -----END PGP SIGNATURE-----
