@@ -1,6 +1,6 @@
 # Copyright 1999-2014 Gentoo Foundation
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /var/cvsroot/gentoo-x86/dev-util/a8/a8-0.11-r2.ebuild,v 1.4 2014/08/15 08:49:51 ssuominen Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-util/a8/a8-0.11-r2.ebuild,v 1.5 2014/12/25 12:44:54 mgorny Exp $
 
 EAPI=5
 PYTHON_COMPAT=( python2_7 )
@@ -18,10 +18,10 @@ IUSE=""
 
 DEPEND=">=dev-python/dbus-python-1[${PYTHON_USEDEP}]
 	dev-python/logbook[${PYTHON_USEDEP}]
-	dev-python/psutil
+	dev-python/psutil[${PYTHON_USEDEP}]
 	dev-python/pyyaml[${PYTHON_USEDEP}]
 	>=dev-python/pygtk-2.22[${PYTHON_USEDEP}]
-	>=dev-python/pygtkhelpers-0.4.3
+	>=dev-python/pygtkhelpers-0.4.3[${PYTHON_USEDEP}]
 	dev-python/setuptools[${PYTHON_USEDEP}]
 	>=x11-libs/vte-0.28.2-r206:0[python,${PYTHON_USEDEP}]"
 RDEPEND="${DEPEND}
