@@ -1,6 +1,9 @@
 # ChangeLog for dev-util/a8
 # Copyright 1999-2014 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-util/a8/ChangeLog,v 1.18 2014/11/25 22:43:48 hasufell Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-util/a8/ChangeLog,v 1.19 2014/12/25 12:44:54 mgorny Exp $
+
+  25 Dec 2014; Michał Górny <mgorny@gentoo.org> a8-0.11-r2.ebuild:
+  Add missing PYTHON_USEDEP.
 
   25 Nov 2014; Julian Ospald <hasufell@gentoo.org> metadata.xml:
   drop maintainership
